test/parsing/vass/wrong-escapes-1.chpl

writeln("Wrong backslash 1\"); \
writeln("DONE.");
